updated a short introduction on HTML File.

--- a/gridWebsite/grid/templates/grid/main.html
+++ b/gridWebsite/grid/templates/grid/main.html
@@ -4,6 +4,23 @@
 	<title>main html</title>
 </head>
 <body>
-<h1>main html render version</h1>
+	<h1>None.for.now.</h1>
+	<p>
+		Hello world, my name is Romel Elizaga and I am going to write a simple python program. 
+	</p>
+	<p>
+		I want to create a grid layout website.
+	</p>
+	<p>
+		inspirations come from layout.land
+	</p>
+	<p>
+		Awesome I am starting to get used to Sublime Text 3.
+		I want to try to learn bootstrap to make this simple layout nicer.
+
+		But, ultimately, I want to create a grid website.
+
+		That is all. 
+	</p>
 </body>
 </html>
