working: included a html template and grid-template-area

--- a/gridWebsite/grid/templates/grid/main.html
+++ b/gridWebsite/grid/templates/grid/main.html
@@ -1,26 +1,22 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
 	<title>main html</title>
+	<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-	<h1>None.for.now.</h1>
-	<p>
-		Hello world, my name is Romel Elizaga and I am going to write a simple python program. 
-	</p>
-	<p>
-		I want to create a grid layout website.
-	</p>
-	<p>
-		inspirations come from layout.land
-	</p>
-	<p>
-		Awesome I am starting to get used to Sublime Text 3.
-		I want to try to learn bootstrap to make this simple layout nicer.
-
-		But, ultimately, I want to create a grid website.
-
-		That is all. 
-	</p>
+	<div class="romels-container">
+		<header class="display-1 d-flex align-items-center justify-content-center">Header</header>
+		<nav class="display-1 d-flex align-items-center justify-content-center">NavBar</nav>
+		<main class="display-1 d-flex align-items-center justify-content-center">Main</main>
+		<footer class="display-1 d-flex align-items-center justify-content-center">Footer</footer>
+	</div>
+	
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
