I solved it: This should be a working file *project now

--- a/gridWebsite/grid/templates/grid/main.html
+++ b/gridWebsite/grid/templates/grid/main.html
@@ -3,16 +3,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width"/>
 	<title>main html</title>
 	<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
 	<div class="romels-container">
-		<header class="display-1 d-flex align-items-center justify-content-center">Header</header>
-		<nav class="display-1 d-flex align-items-center justify-content-center">NavBar</nav>
-		<main class="display-1 d-flex align-items-center justify-content-center">Main</main>
-		<footer class="display-1 d-flex align-items-center justify-content-center">Footer</footer>
+		<header class="display-1 d-flex align-items-center justify-content-center rounded">Header</header>
+		<nav class="display-1 d-flex align-items-center justify-content-center rounded">NavBar</nav>
+		<main class="display-1 d-flex align-items-center justify-content-center rounded">Main</main>
+		<footer class="display-1 d-flex align-items-center justify-content-center rounded">Footer</footer>
 	</div>
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
