--- a/gridWebsite/grid/templates/grid/main.html
+++ b/gridWebsite/grid/templates/grid/main.html
@@ -9,15 +9,29 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-	<div class="romels-container">
-		<header class="display-1 d-flex align-items-center justify-content-center rounded">Header</header>
-		<nav class="display-1 d-flex align-items-center justify-content-center rounded">NavBar</nav>
-		<main class="display-1 d-flex align-items-center justify-content-center rounded">Main</main>
-		<footer class="display-1 d-flex align-items-center justify-content-center rounded">Footer</footer>
-	</div>
-	
+	<h1>Navbar</h1>
+
+	<hr>
+		<div class=romels-container-container>
+			<div class="romels-container">
+				<header class="display-1 d-flex align-items-center justify-content-center rounded">Header</header>
+				<nav class="display-1 d-flex align-items-center justify-content-center rounded">NavBar</nav>
+				<main class="display-1 d-flex align-items-center justify-content-center rounded">Main</main>
+				<footer class="display-1 d-flex align-items-center justify-content-center rounded">Footer</footer>
+			</div>
+		</div>
+	<hr>
+
+	{% block container-content %}
+
+	{% endblock %}
+
+	<hr>
+	<h5>Our Footer</h5>
+
+
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
