--- a/gridWebsite/grid/templates/grid/main.html
+++ b/gridWebsite/grid/templates/grid/main.html
@@ -9,18 +9,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Navbar</h1>
-
-	<hr>
-		<div class=romels-container-container>
-			<div class="romels-container">
-				<header class="display-1 d-flex align-items-center justify-content-center rounded">Header</header>
-				<nav class="display-1 d-flex align-items-center justify-content-center rounded">NavBar</nav>
-				<main class="display-1 d-flex align-items-center justify-content-center rounded">Main</main>
-				<footer class="display-1 d-flex align-items-center justify-content-center rounded">Footer</footer>
-			</div>
-		</div>
-	<hr>
+	<h1 class= "romeltitlefont" style="color:red">Guamtennis</h1>
 
 	{% block container-content %}
 
