This is the end of the day save: first

--- a/gridWebsite/grid/templates/grid/main-extended.html
+++ b/gridWebsite/grid/templates/grid/main-extended.html
@@ -2,11 +2,19 @@
 
 {% block container-content %}
 <div class=romels-container-container>
+	<!--
 	<div class="romels-container">
 		<header class="display-1 d-flex align-items-center justify-content-center rounded">Header</header>
 		<nav class="display-1 d-flex align-items-center justify-content-center rounded">NavBar</nav>
 		<main class="display-1 d-flex align-items-center justify-content-center rounded">Main</main>
 		<footer class="display-1 d-flex align-items-center justify-content-center rounded">Footer</footer>
+	</div>
+-->
+	<div class="romels-container">
+		<div id="romelsid"><p class="display-1">Header</p></div>
+		<div id="romelsnavbar"><p class="display-1">Nav</p></div>
+		<div id="romelsmain"><p class="display-1">Main</p></div>
+		<div id="romelsfooter"><p class="display-1">Footer</p></div>
 	</div>
 </div>
 {% endblock %}
