--- a/gridWebsite/static/css/main.css
+++ b/gridWebsite/static/css/main.css
@@ -18,8 +18,8 @@ body {
 	grid-template-rows: 1fr 4fr 1fr;
 	grid-template-areas: 
 	"h h h"
-	"n n n"
-	"f m m";
+	"n m m"
+	"f f f";
 	background-color: #ebeff5;
 	grid-gap:0.2rem;
 }
@@ -27,22 +27,34 @@ body {
 	margin:0.2rem;
 }
 
-header {
+#romelsid {
+	display:flex;
+	align-items: center;
+	justify-content: center;
 	grid-area: h;
 	background-color: grey;
 }
 
-nav {
+#romelsnavbar {
+	display:flex;
+	align-items: center;
+	justify-content: center;
 	grid-area: n;
 	background-color:#4cb4c7;
 }
 
-main {
+#romelsmain {
+	display:flex;
+	align-items: center;
+	justify-content: center;
 	grid-area: m;
 	background-color:#7abecc;
 }
 
-footer {
+#romelsfooter {
+	display:flex;
+	align-items: center;
+	justify-content: center;
 	grid-area: f;
 	background-color: teal;
 }
@@ -62,16 +74,21 @@ footer {
 }
 */
 
+
+/* let me test without this media screen*/
+
+/*
 @media only screen and (max-width: 500px) {
 	.romels-container {
 		grid-template-columns: 1fr;
-		grid-auto-rows: 0.4fr 0.4fr 2.2fr 1fr;
+		grid-auto-rows: repeat(4, 1fr);
 		grid-template-areas:
 		"h"
-		"m" 
-		"n"
+		"n" 
+		"m"
 		"f"
 		;
 
 	}
 }
+*/
