--- a/gridWebsite/static/css/main.css
+++ b/gridWebsite/static/css/main.css
@@ -17,9 +17,11 @@ body {
 	display:grid;
 	height:100vh;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 1fr 4fr 1fr;
+	grid-template-rows: 1fr 0.5fr 1fr 1fr 1fr;
 	grid-template-areas: 
 	"h h h"
+	"n m m"
+	"n m m"
 	"n m m"
 	"f f f";
 	background-color: #ebeff5;
@@ -79,18 +81,16 @@ body {
 
 /* let me test without this media screen*/
 
-/*
 @media only screen and (max-width: 500px) {
 	.romels-container {
 		grid-template-columns: 1fr;
-		grid-auto-rows: repeat(4, 1fr);
+		grid-auto-rows: 1fr 1fr 1fr 1fr;
 		grid-template-areas:
 		"h"
 		"n" 
 		"m"
+		"m"
 		"f"
 		;
-
 	}
 }
-*/
