showed my friends some cool things : with my website

--- a/gridWebsite/grid/templates/grid/simple.html
+++ b/gridWebsite/grid/templates/grid/simple.html
@@ -2,7 +2,7 @@
 
 {% block body-content %}
 
-<h1 class= "romeltitlefont">Products</h1>
+<h1 class= "romeltitlefont">Simple</h1>
 
 <div class=romels-container-container>
 	<div class="romels-container">
