Revert "showed my friends some cool things : with my website"
This reverts commit e56b849bd595094deb612f622758345ad7c0298a.

--- a/gridWebsite/grid/templates/grid/main-extended.html
+++ b/gridWebsite/grid/templates/grid/main-extended.html
@@ -1,8 +1,6 @@
 {% extends 'grid/main.html'%}
 
-{% block body-content %}
-<h1 class= "romeltitlefont">Guamtennis</h1>
-
+{% block container-content %}
 <div class=romels-container-container>
 	<!--
 	<div class="romels-container">
@@ -19,7 +17,4 @@
 		<div id="romelsfooter"><p class="display-1">Footer</p></div>
 	</div>
 </div>
-<hr>
-
-<h5>Our Footer</h5>
 {% endblock %}
