--- a/gridWebsite/grid/templates/grid/products.html
+++ b/gridWebsite/grid/templates/grid/products.html
@@ -1,19 +1,9 @@
-{% extends 'grid/main.html'%}
-
-{% block body-content %}
-
-<h1 class= "romeltitlefont">Products</h1>
-
-<div class=romels-container-container>
-	<div class="romels-container">
-		<div id="romelsid"><p class="display-1">Header</p></div>
-		<div id="romelsnavbar"><p class="display-1">Nav</p></div>
-		<div id="romelsmain"><p class="display-1">Main</p></div>
-		<div id="romelsfooter"><p class="display-1">Footer</p></div>
-	</div>
-</div>
-
-<hr>
-<h5>Our Footer</h5>
-
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>hello</title>
+</head>
+<body>
+	<p>hello products</p>
+</body>
+</html>
