created a simple HTML file: I like this version better

--- a/gridWebsite/static/css/main.css
+++ b/gridWebsite/static/css/main.css
@@ -84,7 +84,7 @@ body {
 @media only screen and (max-width: 500px) {
 	.romels-container {
 		grid-template-columns: 1fr;
-		grid-auto-rows: 1fr 1fr 1fr 1fr;
+		grid-auto-rows: 1fr 1fr 1fr 1fr 1fr;
 		grid-template-areas:
 		"h"
 		"n" 
