work copy: will implement css grid within a grid

--- a/gridWebsite/grid/templates/grid/simple-weekly.html
+++ b/gridWebsite/grid/templates/grid/simple-weekly.html
@@ -2,15 +2,31 @@
 
 {% block container-content %}
 
-<div class=romels-container-container>
-	<div class="romels-container">
-		<div class="simpleflex001"><p class="display-1">Monday</p></div>
-		<div class="simpleflex002"><p class="display-1">Tuesday</p></div>
-		<div class="simpleflex003"><p class="display-1">Wednesday</p></div>
-		<div class="simpleflex004"><p class="display-1">Thursday</p></div>
-		<div class="simpleflex005"><p class="display-1">Friday</p></div>
-		<div class="simpleflex006"><p class="display-1">Saturday</p></div>
-		<div class="simpleflex007"><p class="display-1">Sunday</p></div>
+<div class=romels-weekly-container>
+	<div class="romels-weekly">
+		<div class="simpleflex001"><p class="lead">Monday</p></div>
+		<!--
+			
+			my idea is to run a for loop within these
+			divs
+
+			{% for each in cellsDatesAndSuch %}
+			<div></div>
+			{% endfor%}
+
+
+			something like that..
+			Am still working on the idea for now. 
+
+
+
+		-->
+		<div class="simpleflex002"><p class="lead">Tuesday</p></div>
+		<div class="simpleflex003"><p class="lead">Wednesday</p></div>
+		<div class="simpleflex004"><p class="lead">Thursday</p></div>
+		<div class="simpleflex005"><p class="lead">Friday</p></div>
+		<div class="simpleflex006"><p class="lead">Saturday</p></div>
+		<div class="simpleflex007"><p class="lead">Sunday</p></div>
 	</div>
 </div>
 
