only problem is simpleweeklygrid.html is not showing 100vh

--- a/gridWebsite/grid/templates/grid/simpleweeklygrid.html
+++ b/gridWebsite/grid/templates/grid/simpleweeklygrid.html
@@ -3,10 +3,10 @@
 {% block container-content %}
 
 <div class=romels-weekly-container>
-	<div class="romels-weekly">
+	<div class="romels-weekly-v2">
 
 		<div class="simplegrid001">
-			<p class="lead">Monday</p>
+			<div class="lead">Monday</div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
@@ -34,7 +34,7 @@
 		</div>
 
 		<div class="simplegrid002">
-			<p class="lead">Tuesday</p>
+			<div class="lead">Tuesday</p></div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
@@ -62,7 +62,7 @@
 		</div>
 
 		<div class="simplegrid003">
-			<p class="lead">Wednesday</p>
+			<div class="lead">Wednesday</p></div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
@@ -90,7 +90,7 @@
 		</div>
 
 		<div class="simplegrid004">
-			<p class="lead">Thursday</p>
+			<div class="lead">Thursday</p></div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
@@ -118,7 +118,7 @@
 		</div>
 
 		<div class="simplegrid005">
-			<p class="lead">Friday</p>
+			<div class="lead">Friday</p></div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
@@ -146,7 +146,7 @@
 		</div>
 
 		<div class="simplegrid006">
-			<p class="lead">Saturday</p>
+			<div class="lead">Saturday</p></div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
@@ -174,7 +174,7 @@
 		</div>
 
 		<div class="simplegrid007">
-			<p class="lead">Sunday</p>
+			<div class="lead">Sunday</p></div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
 			<div class="item"> {__replace__} </div>
